# trab1-web

./: .gitignore  .pre-commit-config.yaml  README.md  biome.json  main.py  manage.py  project.md  pyproject.toml
infrastructure/: render.yaml
infrastructure-legacy/: .terraform.lock.hcl  deploy.sh  main.tf
tasks/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task.py  0003_task_full_fields.py  0004_remove_task_done.py  0005_subtask.py
templates/: base.html  home.html
templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt  register.html
templates/tasks/: list_confirm_delete.html  list_detail.html  list_form.html  list_list.html  task_confirm_delete.html  task_detail.html  task_form.html
trab1_web/: asgi.py  settings.py  urls.py  wsgi.py
users/: forms.py  tests.py  urls.py  views.py
