[project]
name = "trab1-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.4",
    "gunicorn>=25.3.0",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.44.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ty>=0.0.32",
]
